# asctb-ct-label-mapper

./: .gitignore  ASCTBMapper_CT_harmonization.ipynb  README.md  publish_package.sh  pyproject.toml  pyproject.tomlBkp  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
asctb_ct_label_mapper/utilities/: asctb_data_wrangling.py
asctb_reference_embeddings/: README.md
data/: All_CTlabels_translations.csv  AzimuthLabels_to_ASCTBLabels.csv  Azimuth_CellTypist_PopV_Lung_ASCTB_Crosswalks.xlsx  CellTypistLabels_to_ASCTBLabels.csv  PopVLabels_to_ASCTBLabels.csv  README.md
documentation/: Diagrams.pptx  OnClass_vs_ASCTBMapper.xlsx
ontology_embeddings/: ASCTB_Lungv1_2.csv  ASCTB_Lungv1_2.pkl
src/: LICENSE  README.md  pyproject.toml
src/asctb_ct_label_mapper/: main.py
src/asctb_ct_label_mapper/utilities/: asctb_data_wrangling.py  nlp_preprocessing.py  plotting.py
