[build-system]
requires = [
  "setuptools>=61.0", 
  "scikit-learn==1.0.2", 
  "pandas==1.4.2", 
  ]
build-backend = "setuptools.build_meta"

[project]
name = "asctb_ct_label_mapper"
version = "0.1.3"
authors = [
  { 
    name="Vikrant Deshpande", 
    email=["vikdeshp@iu.edu", "vikrant.deshpande09876@gmail.com"]
  },
]
description = "A package to ensure controlled vocabulary for annotations of scRNA-seq datasets. The goal is to enable cross-dataset or cross-experiment comparison of data by aligning annotations to a standard reference point."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hubmapconsortium/asctb-ct-label-mapper"
"Bug Tracker" = "https://github.com/hubmapconsortium/asctb-ct-label-mapper/issues"